@@ -66,6 +66,18 @@ public class ComplexPhraseQueryParser extends QueryParser {
 
   private boolean isPass2ResolvingPhrases;
 
+  private boolean inOrder = true;
+
+  /**
+   * When <code>inOrder</code> is true, the search terms must
+   * exists in the documents as the same order as in query.
+   *
+   * @param inOrder parameter to choose between ordered or un-ordered proximity search
+   */
+  public void setInOrder(final boolean inOrder) {
+    this.inOrder = inOrder;
+  }
+
   private ComplexPhraseQuery currentPhraseQuery = null;
 
   public ComplexPhraseQueryParser(Version matchVersion, String f, Analyzer a) {
@@ -74,7 +86,7 @@ public class ComplexPhraseQueryParser extends QueryParser {
 
   @Override
   protected Query getFieldQuery(String field, String queryText, int slop) {
-    ComplexPhraseQuery cpq = new ComplexPhraseQuery(field, queryText, slop);
+    ComplexPhraseQuery cpq = new ComplexPhraseQuery(field, queryText, slop, inOrder);
     complexPhrases.add(cpq); // add to list of phrases to be parsed once
     // we
     // are through with this pass
@@ -202,14 +214,17 @@ public class ComplexPhraseQueryParser extends QueryParser {
 
     int slopFactor;
 
+    private final boolean inOrder;
+
     private Query contents;
 
     public ComplexPhraseQuery(String field, String phrasedQueryStringContents,
-        int slopFactor) {
+        int slopFactor, boolean inOrder) {
       super();
       this.field = field;
       this.phrasedQueryStringContents = phrasedQueryStringContents;
       this.slopFactor = slopFactor;
+      this.inOrder = inOrder;
     }
 
     // Called by ComplexPhraseQueryParser for each phrase after the main
@@ -280,7 +295,7 @@ public class ComplexPhraseQueryParser extends QueryParser {
       }
       if (numNegatives == 0) {
         // The simple case - no negative elements in phrase
-        return new SpanNearQuery(allSpanClauses, slopFactor, true);
+        return new SpanNearQuery(allSpanClauses, slopFactor, inOrder);
       }
       // Complex case - we have mixed positives and negatives in the
       // sequence.
@@ -302,11 +317,11 @@ public class ComplexPhraseQueryParser extends QueryParser {
         // need to increase slop factor based on gaps introduced by
         // negatives
         include = new SpanNearQuery(includeClauses, slopFactor + numNegatives,
-            true);
+            inOrder);
       }
       // Use sequence of positive and negative values as the exclude.
       SpanNearQuery exclude = new SpanNearQuery(allSpanClauses, slopFactor,
-          true);
+          inOrder);
       SpanNotQuery snot = new SpanNotQuery(include, exclude);
       return snot;
     }
